--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,8 +43,8 @@
             <div class="container">
                 <!-- Logo container-->
                 <a class="logo" href="index.html">
-                    <img src="images/logo-dark.png" height="24" class="logo-light-mode" alt="">
-                    <img src="images/logo-light.png" height="24" class="logo-dark-mode" alt="">
+                    <img src="images/logo-zabble-dark.png" height="150" class="logo-light-mode" alt="">
+                    <img src="images/logo-zabble-light.png" height="150" class="logo-dark-mode" alt="">
                 </a>
             </div><!--end container-->
         </header><!--end header-->
@@ -53,19 +53,17 @@
         <!-- Start Hero -->
         <section class="bg-half-170 d-table w-100">
             <div class="container">
-                <div class="row mt-5 align-items-center position-relative" style="z-index: 1;">
-                    <div class="col-lg-6">
+                <div class="row mt-5 align-items-center position-relative" style="z-index: 1; text-align: center;">
                         <div class="title-heading text-center text-lg-start">
                             <!-- <span class="badge rounded-lg bg-soft-primary">Videocall</span> -->
-                            <h4 class="heading fw-bold mb-3 mt-3">Zabble</h4>
-                            <p class="para-desc text-muted mx-auto mx-lg-start mb-0">We are a Zabble, a startup focused on creating virtual sessions for people to study, code, and keep each other accountable or just hangout.</p>
-                            <div class="mt-3">
+                            <h4 class="text-muted heading fw-bold mb-3 mt-3 mx-auto mx-lg-start mb-0" style="text-align: center; color: black;">Zabble</h4>
+                            <p class="para-desc text-muted mx-auto mx-lg-start mb-0" style="text-align: center;">We are a Zabble, a startup focused on creating virtual sessions for people to study, code, and keep each other accountable or just hangout.</p>
+                            <div class="para-desc text-muted mt-3 mx-auto mx-lg-start mb-0" style="text-align: center;">
                                 <a href="https://discord.gg/uUcWtaqjyn" class="btn btn-primary me-2 mt-2" target = "_blank">Join our Discord</a>
                             </div>
                         </div>
-                    </div><!--end col-->
 
-                    <div class="col-lg-6 mt-4 pt-2 mt-lg-0 pt-lg-0">
+                    <!-- <div class="col-lg-6 mt-4 pt-2 mt-lg-0 pt-lg-0">
                         <div class="card border-0 shadow rounded ms-lg-4 overflow-hidden">
                             <div class="d-flex p-2 bg-light justify-content-between align-items-center">
                                 <div>
@@ -93,7 +91,7 @@
                                 <p class="text-muted mb-0"><b>Note:</b> This video is only for demo purposes.</p>
                             </div>
                         </div>
-                    </div><!--end col-->
+                    </div>end col -->
                 </div><!--end row-->
             </div><!--end container-->
         </section><!--end section--> 
