FIX: Fixed favicon and card size

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <meta name="author" content="Zabble" />
         <meta name="email" content="Zabble" />
         <meta name="website" content="http://zabble.live" />
-        <meta name="Version" content="v0.1 />
+        <meta name="Version" content="v0.1" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
         <!-- Bootstrap -->
@@ -113,7 +113,7 @@
                     <div class="col-xl-10">
                         <div class="row flex">
                             <div class="col-md-6 mt-4 pt-2">
-                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded" style="height: 200px;">
+                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded" style="height: 100%;">
                                     <div class="icons text-primary d-block text-center rounded">
                                         <i class="uil uil-comment-verify d-block rounded h3 mb-0"></i>
                                     </div>
@@ -126,7 +126,7 @@
                             </div><!--end col-->
                             
                             <div class="col-md-6 mt-4 pt-2">
-                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded"  style="height: 200px;">
+                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded"  style="height: 100%;">
                                     <div class="icons text-primary d-block text-center rounded">
                                         <i class="uil uil-database-alt d-block rounded h3 mb-0"></i>
                                     </div>
@@ -138,7 +138,7 @@
                             </div><!--end col-->
                             
                             <div class="col-md-6 mt-4 pt-2 fixed-height">
-                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded"  style="height: 200px;">
+                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded"  style="height: 100%;">
                                     <div class="icons text-primary d-block text-center rounded">
                                         <i class="uil uil-image d-block rounded h3 mb-0"></i>
                                     </div>
@@ -150,7 +150,7 @@
                             </div><!--end col-->
                             
                             <div class="col-md-6 mt-4 pt-2 fixed-height">
-                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded"  style="height: 200px;">
+                                <div class="d-flex features feature-clean p-4 bg-white shadow rounded"  style="height: 100%;">
                                     <div class="icons text-primary d-block text-center rounded">
                                         <i class="uil uil-video d-block rounded h3 mb-0"></i>
                                     </div>
