--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
                         <div class="title-heading text-center text-lg-start">
                             <!-- <span class="badge rounded-lg bg-soft-primary">Videocall</span> -->
                             <h4 class="text-muted heading fw-bold mb-3 mt-3 mx-auto mx-lg-start mb-0" style="text-align: center; color: black;">Zabble</h4>
-                            <p class="para-desc text-muted mx-auto mx-lg-start mb-0" style="text-align: center;">We are a Zabble, a startup focused on creating virtual sessions for people to study, code, and keep each other accountable or just hangout.</p>
+                            <p class="para-desc text-muted mx-auto mx-lg-start mb-0" style="text-align: center;">We are Zabble, a startup focused on creating virtual sessions for people to study, code, and keep each other accountable or just hangout.</p>
                             <div class="para-desc text-muted mt-3 mx-auto mx-lg-start mb-0" style="text-align: center;">
                                 <a href="https://discord.gg/uUcWtaqjyn" class="btn btn-primary me-2 mt-2" target = "_blank">Join our Discord</a>
                             </div>
