FEATURE: Added how does it work accordion

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -277,6 +277,78 @@
                 </div><!--end row-->
             </div><!--end container-->
         </section><!--end section-->
+        <div class="container mt-100 mt-60">
+            <div class="row align-items-center">
+                <div class="col-lg-7 col-md-6">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item rounded shadow">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button border-0 bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                    aria-expanded="true" aria-controls="collapseOne">
+                                    How does it work ?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse border-0 collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body text-muted bg-white">
+                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="accordion-item rounded shadow mt-2">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button border-0 bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                    aria-expanded="false" aria-controls="collapseTwo">
+                                    Do I need a designer to use Landrick ?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse border-0 collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body text-muted bg-white">
+                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item rounded shadow mt-2">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button border-0 bg-light collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What do I need to do to start selling ?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse border-0 collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body text-muted bg-white">
+                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item rounded shadow mt-2">
+                            <h2 class="accordion-header" id="headingFour">
+                                <button class="accordion-button border-0 bg-light collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    What happens when I receive an order ?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse border-0 collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body text-muted bg-white">
+                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--end col-->
+
+                <div class="col-lg-5 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                    <img src="images/illustrator/faq.svg" alt="">
+                </div><!--end col-->
+            </div><!--end row-->
+        </div><!--end container-->
+
         <!-- End -->
         <!-- Footer Start -->
         <!-- <footer class="footer">
@@ -350,7 +422,7 @@
                 <!-- </div>end row -->
             <!-- </div>end container -->
         <!-- </footer>end footer -->
-        <footer class="footer footer-bar">
+        <footer class="footer footer-bar mt-100">
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
