Change landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
         <meta name="keywords" content="Saas, Software, multi-uses, HTML, Clean, Modern" />
         <meta name="author" content="Zabble" />
         <meta name="email" content="Zabble" />
-        <meta name="website" content="http://zabble.live" />
+        <meta name="website" content="https://zabble.me" />
         <meta name="Version" content="v0.1" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -42,7 +42,7 @@
         <header id="topnav" class="defaultscroll sticky">
             <div class="container">
                 <!-- Logo container-->
-                <a class="logo" href="index.html">
+                <a class="logo" href="/">
                     <img src="images/logo-zabble-dark.png" height="150" class="logo-light-mode" alt="">
                     <img src="images/logo-zabble-light.png" height="150" class="logo-dark-mode" alt="">
                 </a>
@@ -50,20 +50,21 @@
         </header><!--end header-->
         <!-- Navbar End -->
 
-        <!-- Start Hero -->
-        <section class="bg-half-170 d-table w-100">
+        <!-- <section class="bg-half-170 d-table w-100">
             <div class="container">
-                <div class="row mt-5 align-items-center position-relative" style="z-index: 1; text-align: center;">
+                <div class="row mt-5 align-items-center position-relative" style="z-index: 1;">
+                    <div class="col-lg-6">
                         <div class="title-heading text-center text-lg-start">
-                            <!-- <span class="badge rounded-lg bg-soft-primary">Videocall</span> -->
-                            <h4 class="text-muted heading fw-bold mb-3 mt-3 mx-auto mx-lg-start mb-0" style="text-align: center; color: black;">Zabble</h4>
-                            <p class="para-desc text-muted mx-auto mx-lg-start mb-0" style="text-align: center;">We are Zabble, a startup focused on creating virtual sessions for people to study, code, and keep each other accountable or just hangout.</p>
-                            <div class="para-desc text-muted mt-3 mx-auto mx-lg-start mb-0" style="text-align: center;">
-                                <a href="https://discord.gg/uUcWtaqjyn" class="btn btn-primary me-2 mt-2" target = "_blank">Join our Discord</a>
-                            </div>
+                            <h4 class="heading fw-bold mb-3 mt-3">Zabble</h4>
+                            <p class="para-desc text-muted mx-auto mx-lg-start mb-0">We are Zabble, a startup focused on creating virtual sessions for people to study, code, and keep each other accountable or just hangout.</p>
+                            <div class="mt-3"></div>
+                                <div class="para-desc text-muted mt-3 mx-auto mx-lg-start mb-0" style="text-align: center;">
+                                    <a href="https://discord.gg/uUcWtaqjyn" class="btn btn-primary me-2 mt-2" target = "_blank">Join our Discord</a>
+                                </div>
                         </div>
+                    </div>
 
-                    <!-- <div class="col-lg-6 mt-4 pt-2 mt-lg-0 pt-lg-0">
+                    <div class="col-lg-6 mt-4 pt-2 mt-lg-0 pt-lg-0">
                         <div class="card border-0 shadow rounded ms-lg-4 overflow-hidden">
                             <div class="d-flex p-2 bg-light justify-content-between align-items-center">
                                 <div>
@@ -91,11 +92,36 @@
                                 <p class="text-muted mb-0"><b>Note:</b> This video is only for demo purposes.</p>
                             </div>
                         </div>
-                    </div>end col -->
+                    </div>
+                </div>
+            </div>
+        </section> -->
+
+        <section class="bg-half-170  d-table w-100" id="home">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-7 col-md-7">
+                        <div class="title-heading mt-4">
+                            <h1 class="heading mb-3">Get Productive <span class="text-primary">Together</span> </h1>
+                            <p class="para-desc text-muted">Whether you are learning piano, doing meditation, completing your unfinished homework, or practicing card tricks. Achieve your goals together with thousands of people through our 24 x 7 virtual sessions.</p>
+                            <!-- <div class="mt-4">
+                                <a href="page-contact-one.html" class="btn btn-primary mt-2 mr-2"><i class="mdi mdi-email"></i> Get Started</a>
+                                <a href="documentation.html" class="btn btn-outline-primary mt-2"><i class="mdi mdi-book-outline"></i> Documentation</a>
+                            </div> -->
+                            <div class="mt-4">
+                                <!-- <div class="para-desc text-muted mt-3 mx-auto mx-lg-start mb-0" style="text-align: center;"> -->
+                                    <a href="https://discord.gg/uUcWtaqjyn" class="btn btn-primary me-2 mt-2" target = "_blank">Join our Discord</a>
+                                <!-- </div> -->
+                            </div>
+                        </div>
+                    </div><!--end col-->
+
+                    <div class="col-lg-5 col-md-5 mt-4 pt-2 mt-sm-0 pt-sm-0">
+                        <img src="images/zabble.svg" alt="">
+                    </div><!--end col-->
                 </div><!--end row-->
             </div><!--end container-->
-        </section><!--end section--> 
-        <!-- End Hero -->
+        </section><!--end section-->
 
         <!-- Start -->
         <section class="section bg-light">
@@ -167,7 +193,7 @@
                 </div><!--end row-->
             </div><!--end container-->
 
-            <div class="container mt-100 mt-60">
+            <!-- <div class="container mt-100 mt-60">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="card rounded border-0 overflow-hidden">
@@ -182,7 +208,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div><!--end col-->
+                                </div>
     
                                 <div class="col-md-6">
                                     <div class="row g-0">
@@ -196,7 +222,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div><!--end col-->
+                                        </div>
     
                                         <div class="col-md-6 col-4">
                                             <div class="position-relative">
@@ -208,7 +234,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div><!--end col-->
+                                        </div>
     
                                         <div class="col-md-6 col-4">
                                             <div class="position-relative">
@@ -220,8 +246,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div><!--end col-->
-    
+                                        </div>
+
                                         <div class="col-md-6 col-4">
                                             <div class="position-relative">
                                                 <a href="javascript:void(0)"><img src="images/video/04.jpg" class="img-fluid" alt=""></a>
@@ -232,7 +258,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div><!--end col-->
+                                        </div>
     
                                         <div class="col-md-6 col-4">
                                             <div class="position-relative">
@@ -244,7 +270,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div><!--end col-->
+                                        </div>
     
                                         <div class="col-md-6 col-4">
                                             <div class="position-relative">
@@ -256,28 +282,34 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div><!--end col-->
-                                    </div><!--end row-->
-                                </div><!--end col-->
-                            </div><!--end row-->
-                        </div><!--end card-->
-                    </div><!--end col-->
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-lg-6 mt-4 mt-lg-0 pt-2 pt-lg-0">
                         <div class="section-title ms-lg-5">
                             <h4 class="title mb-4">Live on Zabble</h4>
                             <p class="text-muted">The concept that makes us unique is the fact that we want to create a live environment that you can join anytime you want from anywhere you want. A whole world of fellow Zabblers is just one click away. Join us in creating this 24/7 live community by joining our discord!</p>
                             <ul class="list-unstyled text-muted">
-                                <!-- <li class="mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>Digital Marketing Solutions for Tomorrow</li>
-                                <li class="mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>Create your own skin to match your brand</li> -->
                             </ul>
-                            <!-- <a href="javascript:void(0)" class="mt-3 h6 text-primary">Let's Chat Now <i class="uil uil-angle-right-b"></i></a> -->
                         </div>
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
-        </section><!--end section-->
+                    </div>
+                </div>
+            </div> -->
+        </section>
+
         <div class="container mt-100 mt-60">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="section-title text-center mb-4 pb-2">
+                        <h4 class="title mb-4">How does it work?</h4>
+                        <!-- <p class="text-muted para-desc mb-0 mx-auto">Start working with <span class="text-primary fw-bold">Landrick</span> that can provide everything you need to generate awareness, drive traffic, connect.</p> -->
+                    </div>
+                </div><!--end col-->
+            </div><!--end row-->
             <div class="row align-items-center">
                 <div class="col-lg-7 col-md-6">
                     <div class="accordion" id="accordionExample">
@@ -285,13 +317,13 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button border-0 bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                                     aria-expanded="true" aria-controls="collapseOne">
-                                    How does it work ?
+                                    Join our Discord Server
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse border-0 collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body text-muted bg-white">
-                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                    Join our Discord by accepting the invite from <a href="https://discord.gg/uUcWtaqjyn">here</a>
                                 </div>
                             </div>
                         </div>
@@ -300,13 +332,13 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button border-0 bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                     aria-expanded="false" aria-controls="collapseTwo">
-                                    Do I need a designer to use Landrick ?
+                                    Write your Goals
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse border-0 collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body text-muted bg-white">
-                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                    Write the goals that you are working on for the day in the "to-do-list" channel of our Discord server
                                 </div>
                             </div>
                         </div>
@@ -315,13 +347,13 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button border-0 bg-light collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What do I need to do to start selling ?
+                                    Find the Right Group of People
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse border-0 collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body text-muted bg-white">
-                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                    Find the Voice Channel (VC) that is related to your goals under the "JUST ZABBLE" section and join that VC
                                 </div>
                             </div>
                         </div>
@@ -330,13 +362,13 @@
                             <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button border-0 bg-light collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                    What happens when I receive an order ?
+                                    Get Things Done Together
                                 </button>
                             </h2>
                             <div id="collapseFour" class="accordion-collapse border-0 collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body text-muted bg-white">
-                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                                    Once you join a VC, you can turn on your camera and start working with the company of other Zabblers
                                 </div>
                             </div>
                         </div>
@@ -427,7 +459,7 @@
                 <div class="row align-items-center">
                     <div class="col-sm-6">
                         <div class="text-sm-start">
-                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Zabble. </p>
+                            <p class="mb-0">© <script>document.write(new Date().getFullYear())</script> Zabble </p>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
