fix landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,7 +144,7 @@
                                         <i class="uil uil-comment-verify d-block rounded h3 mb-0"></i>
                                     </div>
                                     <div class="flex-1 content ms-4">
-                                        <h5 class="mb-1"><a href="javascript:void(0)" class="text-dark">Achieve your Goals Together</a></h5>
+                                        <h5 class="mb-1"><aclass="text-dark">Achieve your Goals Together</a></h5>
                                         <p class="text-muted mb-0">Whether you are practicing guitar, doing yoga, or preparing for an exam. Get up, turn on your camera, and do it live together with thousands of people.
                                         </p>
                                     </div>
@@ -157,7 +157,7 @@
                                         <i class="uil uil-database-alt d-block rounded h3 mb-0"></i>
                                     </div>
                                     <div class="flex-1 content ms-4">
-                                        <h5 class="mb-1"><a href="javascript:void(0)" class="text-dark">Be Accountable and Productive</a></h5>
+                                        <h5 class="mb-1"><a class="text-dark">Be Accountable and Productive</a></h5>
                                         <p class="text-muted mb-0">Achieve your goals by being accountable to thousands of people that are doing the same thing together with you</p>
                                     </div>
                                 </div>
@@ -169,7 +169,7 @@
                                         <i class="uil uil-image d-block rounded h3 mb-0"></i>
                                     </div>
                                     <div class="flex-1 content ms-4">
-                                        <h5 class="mb-1"><a href="javascript:void(0)" class="text-dark">Gamify your Experience of Achieving Goals</a></h5>
+                                        <h5 class="mb-1"><a class="text-dark">Gamify your Experience of Achieving Goals</a></h5>
                                         <p class="text-muted mb-0">Write your goals, track them, healthily compete with others and climb the rank of the leaderboard</p>
                                     </div>
                                 </div>
@@ -181,7 +181,7 @@
                                         <i class="uil uil-video d-block rounded h3 mb-0"></i>
                                     </div>
                                     <div class="flex-1 content ms-4">
-                                        <h5 class="mb-1"><a href="javascript:void(0)" class="text-dark">Hangout with People from Around the World</a></h5>
+                                        <h5 class="mb-1"><a class="text-dark">Hangout with People from Around the World</a></h5>
                                         <p class="text-muted mb-0">We regularly organise fun activities like movie nights, music competitions, and guided programmes for all of you</p>
                                     </div>
                                 </div>
