--- a/views/landingpage/page-about-us.ejs
+++ b/views/landingpage/page-about-us.ejs
@@ -110,12 +110,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-5 mt-4 pt-2 mt-sm-0 pt-sm-0">
                     <div class="position-relative">
-                        <img src="images/company/about.jpg" class="rounded img-fluid mx-auto d-block" alt="">
-                        <div class="play-icon">
-                            <a href="http://vimeo.com/287684225" class="play-btn video-play-icon">
-                                <i class="mdi mdi-play text-primary rounded-circle bg-white shadow"></i>
-                            </a>
-                        </div>
+                        <img src="/images/illustrator/inbox-cleanup.svg" class="rounded img-fluid mx-auto d-block" alt="">
                     </div>
                 </div><!--end col-->
 
