--- a/views/landingpage/page-about-us.ejs
+++ b/views/landingpage/page-about-us.ejs
@@ -81,7 +81,7 @@
                         <div class="page-next">
                             <nav aria-label="breadcrumb" class="d-inline-block">
                                 <ul class="breadcrumb bg-white rounded shadow mb-0">
-                                    <li class="breadcrumb-item"><a href="/">Zabble</a></li>
+                                    <li class="breadcrumb-item"><a href="/">Zabbleeeeeeee</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">About Us</li>
                                 </ul>
                             </nav>
