Landing Page SVG

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -136,7 +136,7 @@
                     </div><!--end col-->
 
                     <div class="col-lg-5 col-md-5 mt-4 pt-2 mt-sm-0 pt-sm-0">
-                        <img src="images/zabblebg.gif" alt="" style = "width: 100%; height: auto">
+                        <img src="images/Sqaure-Logo-Zabble.png" alt="" style = "width: 100%; height: auto">
                     </div><!--end col-->
                 </div><!--end row-->
             </div><!--end container-->
